--- a/ui/styles/main.qss
+++ b/ui/styles/main.qss
@@ -535,21 +535,27 @@ QDateEdit#formCombo:focus {
 }
 
 QDateEdit#formCombo::drop-down {
+    subcontrol-origin: padding;
+    subcontrol-position: center right;
     border: none;
-    width: 30px;
+    border-left: 2px solid #BADFE7;
+    width: 36px;
+    background-color: #E8F4F6;
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
 }
 
 QDateEdit#formCombo::down-arrow {
-    image: none;
-    width: 14px;
-    height: 14px;
+    width: 16px;
+    height: 16px;
+    image: url(ui/styles/calendar.svg);
 }
 
 QDateEdit::up-button,
 QDateEdit::down-button {
     border: none;
     background: transparent;
-    width: 20px;
+    width: 0;
 }
 
 
